# CuteWrappers

./: .gitignore  CMakeLists.txt  CuteSettings.h  CuteWrappers.pro  Doxyfile.in  LICENSE.txt  README  README.md  install.sh  installCuteWrappers  qtcreator-windows.cmd
src/: CMakeLists.txt  CuteSettings.cpp  CuteSettings.h
